# CCMpred

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  azure-pipelines.yml
cmake_lib/: FindMsgPack.cmake  FindUUID.cmake
example/: 1atzA.aln
include/: ccmpred.h  evaluate_cpu.h  evaluate_cpu_omp.h  evaluate_cuda.h  evaluate_cuda_kernels.h  io.h  meta.h  numdif.h  parseopt.h  reweighting.h  sequence.h  util.h
lib/libconjugrad/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
lib/libconjugrad/include/: arithmetic.h  conjugrad.h  conjugrad_kernels.h  help_functions.h
lib/libconjugrad/samples/: polynomial.c  rosenbrock.c  sphere.c
lib/libconjugrad/src/: arithmetic_ansi.c  arithmetic_simd.c  conjugrad.c  conjugrad_cuda.c  conjugrad_kernels.cu  debug.c  help_functions.cu
scripts/: convert_alignment.py  top_couplings.py
src/: ccmpred.c  evaluate_cpu.c  evaluate_cpu_omp.c  evaluate_cuda.c  evaluate_cuda_kernels.cu  io.c  meta.c  numdif.c  parseopt.c  reweighting.c  sequence.c  util.c
test/: test.sh
